# alsa-plugin

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile.am  Makefile.in  README-adi-dsp
src/: Makefile.am  Makefile.in  pcm_adi_dsp.c
